gcc/testsuite/rust/rustc/ui/issues/issue-64620.rs
enum Bug {
    V1 = return [0][0] // { dg-error ".E0572." "" { target *-*-* } }
}

fn main() {}

